--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,14 @@
 			</section>
 		</main>
 
+		<footer class="footer">
+			<section class="content">
+				<div class="footer__content">
+					<p class="footer__text">Desarrollado por Pedro Purihuaman - © 2021</p>
+				</div>
+			</section>
+		</footer>
+
 		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	</body>
 </html>
